fixed games list list being partially covered by content

--- a/public_html/bootstrap/css/games.css
+++ b/public_html/bootstrap/css/games.css
@@ -1469,7 +1469,7 @@ c.user-money {
     width: 25%;
        background: linear-gradient(to bottom, #1c2129, #282f3a);
     height:100%;
-z-index:5;
+z-index:8;
     border-right:solid 1px #2a303a;
     -webkit-transition-timing-function: cubic-bezier(0, 1.01, .55, .99);
     transition-timing-function: cubic-bezier(0, 1.01, .55, .99);
